fix: scroll and width when modal is open (modal is too big), index in root directory for github pages

--- a/practice/css/style.css
+++ b/practice/css/style.css
@@ -11,7 +11,7 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  width: 99svw;
+  width: 100%;
   z-index: 9;
   background-color: var(--modal-background);
   justify-content: center;
